test: #44 빈 플레이리스트 테스트 케이스 추가 및 기존 테스트 코드 알맞게 수정